PROJECT ( OpenFOAM )

# Build the dependent libraries first
ADD_SUBDIRECTORY ( ./src/combustionModels )
ADD_SUBDIRECTORY ( ./src/conversion )
ADD_SUBDIRECTORY ( ./src/dummyThirdParty/metisDecomp )
ADD_SUBDIRECTORY ( ./src/dummyThirdParty/MGridGen )
ADD_SUBDIRECTORY ( ./src/dummyThirdParty/ptscotchDecomp )
ADD_SUBDIRECTORY ( ./src/dummyThirdParty/scotchDecomp )
ADD_SUBDIRECTORY ( ./src/dynamicFvMesh )
ADD_SUBDIRECTORY ( ./src/dynamicMesh )
ADD_SUBDIRECTORY ( ./src/edgeMesh )
ADD_SUBDIRECTORY ( ./src/engine )
ADD_SUBDIRECTORY ( ./src/fileFormats )
ADD_SUBDIRECTORY ( ./src/finiteVolume )
ADD_SUBDIRECTORY ( ./src/fvAgglomerationMethods/MGridGenGamgAgglomeration )
ADD_SUBDIRECTORY ( ./src/fvAgglomerationMethods/pairPatchAgglomeration )
ADD_SUBDIRECTORY ( ./src/fvMotionSolver )
ADD_SUBDIRECTORY ( ./src/fvOptions )
ADD_SUBDIRECTORY ( ./src/genericPatchFields )
ADD_SUBDIRECTORY ( ./src/lagrangian/basic )
ADD_SUBDIRECTORY ( ./src/lagrangian/coalCombustion )
ADD_SUBDIRECTORY ( ./src/lagrangian/distributionModels )
ADD_SUBDIRECTORY ( ./src/lagrangian/dsmc )
ADD_SUBDIRECTORY ( ./src/lagrangian/intermediate )
ADD_SUBDIRECTORY ( ./src/lagrangian/molecularDynamics/molecularMeasurements )
ADD_SUBDIRECTORY ( ./src/lagrangian/molecularDynamics/molecule )
ADD_SUBDIRECTORY ( ./src/lagrangian/molecularDynamics/potential )
ADD_SUBDIRECTORY ( ./src/lagrangian/solidParticle )
ADD_SUBDIRECTORY ( ./src/lagrangian/spray )
ADD_SUBDIRECTORY ( ./src/lagrangian/turbulence )
ADD_SUBDIRECTORY ( ./src/mesh/autoMesh )
ADD_SUBDIRECTORY ( ./src/mesh/blockMesh )
ADD_SUBDIRECTORY ( ./src/mesh/extrudeModel )
ADD_SUBDIRECTORY ( ./src/meshTools )
ADD_SUBDIRECTORY ( ./src/ODE )
ADD_SUBDIRECTORY ( ./src/OpenFOAM )
ADD_SUBDIRECTORY ( ./src/OSspecific/POSIX )
ADD_SUBDIRECTORY ( ./src/parallel/decompose/decompose )
ADD_SUBDIRECTORY ( ./src/parallel/decompose/decompositionMethods )
ADD_SUBDIRECTORY ( ./src/parallel/decompose/metisDecomp )
ADD_SUBDIRECTORY ( ./src/parallel/decompose/ptscotchDecomp )
ADD_SUBDIRECTORY ( ./src/parallel/decompose/scotchDecomp )
ADD_SUBDIRECTORY ( ./src/parallel/distributed )
ADD_SUBDIRECTORY ( ./src/parallel/reconstruct/reconstruct )
ADD_SUBDIRECTORY ( ./src/postProcessing/foamCalcFunctions )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/cloud )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/field )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/forces )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/fvTools )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/IO )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/jobControl )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/systemCall )
ADD_SUBDIRECTORY ( ./src/postProcessing/functionObjects/utilities )
ADD_SUBDIRECTORY ( ./src/postProcessing/postCalc )
ADD_SUBDIRECTORY ( ./src/Pstream/dummy )
ADD_SUBDIRECTORY ( ./src/Pstream/gamma )
ADD_SUBDIRECTORY ( ./src/Pstream/mpi )
ADD_SUBDIRECTORY ( ./src/randomProcesses )
ADD_SUBDIRECTORY ( ./src/regionCoupled )
ADD_SUBDIRECTORY ( ./src/regionModels/pyrolysisModels )
ADD_SUBDIRECTORY ( ./src/regionModels/regionCoupling )
ADD_SUBDIRECTORY ( ./src/regionModels/regionModel )
ADD_SUBDIRECTORY ( ./src/regionModels/surfaceFilmModels )
ADD_SUBDIRECTORY ( ./src/regionModels/surfaceFilmModels/derivedFvPatchFields/wallFunctions )
ADD_SUBDIRECTORY ( ./src/regionModels/thermalBaffleModels )
ADD_SUBDIRECTORY ( ./src/renumber/renumberMethods )
ADD_SUBDIRECTORY ( ./src/renumber/SloanRenumber )
ADD_SUBDIRECTORY ( ./src/renumber/zoltanRenumber )
ADD_SUBDIRECTORY ( ./src/sampling )
ADD_SUBDIRECTORY ( ./src/sixDoFRigidBodyMotion )
ADD_SUBDIRECTORY ( ./src/surfMesh )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/barotropicCompressibilityModel )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/basic )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/chemistryModel )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/laminarFlameSpeed )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/properties/liquidMixtureProperties )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/properties/liquidProperties )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/properties/solidMixtureProperties )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/properties/solidProperties )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/radiationModels )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/reactionThermo )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/SLGThermo )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/solidChemistryModel )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/solidSpecie )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/solidThermo )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/specie )
ADD_SUBDIRECTORY ( ./src/thermophysicalModels/thermophysicalFunctions )
ADD_SUBDIRECTORY ( ./src/topoChangerFvMesh )
ADD_SUBDIRECTORY ( ./src/transportModels/incompressible )
ADD_SUBDIRECTORY ( ./src/transportModels/interfaceProperties )
ADD_SUBDIRECTORY ( ./src/transportModels/twoPhaseMixture )
ADD_SUBDIRECTORY ( ./src/transportModels/twoPhaseProperties )
ADD_SUBDIRECTORY ( ./src/triSurface )
ADD_SUBDIRECTORY ( ./src/TurbulenceModels/compressible )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/compressible/LES )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/compressible/RAS )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/compressible/turbulenceModel )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/derivedFvPatchFields )
ADD_SUBDIRECTORY ( ./src/TurbulenceModels/incompressible )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/incompressible/LES )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/incompressible/RAS )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/incompressible/turbulenceModel )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/LES/LESdeltas )
ADD_SUBDIRECTORY ( ./src/turbulenceModels/LES/LESfilters )
ADD_SUBDIRECTORY ( ./src/TurbulenceModels/turbulenceModels )
